--- a/services.html
+++ b/services.html
@@ -20,7 +20,7 @@
 
     <script src="js/angular.min.js"></script>
     <script src="js/angular-route.js"></script>
-    <script src="js/routes.js"></script>
+    
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -175,16 +175,16 @@
             <div class="navbar-collapse collapse w-100 dual-collapse2 order-1 order-md-0">
                 <ul class="navbar-nav ml-auto text-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="/the-city">The City</a>
+                        <a class="nav-link" href="/thecity.html">The City</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/villas">Villas</a>
+                        <a class="nav-link" href="/villas.html">Villas</a>
                     </li>
                 </ul>
             </div>
 
             <div class="mx-auto my-2 order-0 order-md-1 position-relative" style="padding-top: 55px; z-index: 1;">
-                <a class="mx-auto" href="/">
+                <a class="mx-auto" href="/index.html">
                     <img src="img/kingdom-city.png" alt="kingdom city" class="rounded-circle" />
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
@@ -195,10 +195,10 @@
             <div class="navbar-collapse collapse w-100 dual-collapse2 order-2 order-md-2">
                 <ul class="navbar-nav mr-auto text-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="/rent">Rent</a>
+                        <a class="nav-link" href="/rent.html">Rent</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/services">Services</a>
+                        <a class="nav-link" href="/services.html">Services</a>
                     </li>
                 </ul>
             </div>
@@ -207,7 +207,7 @@
         <!-- End : Desktop View -->
         <!-- Mobile View -->
         <div class="d-block d-md-none">
-            <a href="/">Kingdom City</a>
+            <a href="/index.html">Kingdom City</a>
         </div>
         <!-- End : Mobile View -->
 
@@ -215,7 +215,7 @@
 
     <!-- Main Content -->
     <main class="container" style="padding-top: 60px !important; padding-bottom: 50px !important;">
-        
+
         <div class="jumbotron">
             <div class="container">
                 <h1 class="display-3">Hello, world!</h1>
@@ -252,13 +252,13 @@
     <footer class="footer">
         <ul class="nav nav-dark bg-black justify-content-center">
             <li class="nav-item">
-                <a class="nav-link active" href="/contact-us">Contact Us</a>
+                <a class="nav-link active" href="/contacts.html">Contact Us</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/location">Location</a>
+                <a class="nav-link" href="/location.html">Location</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/sitemap">Site Map</a>
+                <a class="nav-link" href="/sitemap.html">Site Map</a>
             </li>
         </ul>
 
@@ -275,7 +275,3 @@
 
 </body>
 </html>
-
-
-
-
