--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
             <div class="navbar-collapse collapse w-100 dual-collapse2 order-1 order-md-0">
                 <ul class="navbar-nav ml-auto text-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="/thecity.html">The City</a>
+                        <a class="nav-link" href="thecity.html">The City</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/villas.html">Villas</a>
+                        <a class="nav-link" href="villas.html">Villas</a>
                     </li>
                 </ul>
             </div>
