--- a/contacts.html
+++ b/contacts.html
@@ -176,36 +176,50 @@
     </header>
 
     <!-- Main Content -->
-    <main class="container" style="padding-top: 120px !important; padding-bottom: 50px !important;">
-        <div class="row">
-            <h1>Contact Us</h1>
+    <div class="jumbotron">
+        <div class="container">
+            <h1 class="display-4">Contact Us!</h1>
+            <div class="row" style="padding-top:10px">
+                <div class="col-md-4">
+                    <strong>Contact Numbers:</strong>
+                    <br />
+                    Tel: +966 11 275 0275 <br />
+                    Fax: +966 11 275 0660
+
+                    <br /><br />
+
+                    <strong>Marketing Email</strong>
+                    <br />
+                    cj@kingdom-city.com
+                </div>
+                <div class="col-md-4">
+                    <strong>Location Address:</strong>
+                    <br />
+                    <span>
+                        Kingdom City Compound<br />
+                        2281 Ath Thumamah Rd – Ar Rabi<br />
+                        Unit No. 2<br />
+                        Riyadh 13316 – 7662<br />
+                        Kingdom Saudi Arabia
+                    </span>
+                </div>
+                <div class="col-md-4">
+                    <strong>Mail Box</strong>
+                    <br />
+                    PO Box 250090<br />
+                    Riyadh, 11391<br />
+                    K.S.A.
+                </div>
+            </div>
         </div>
-        <br />
-        <div class="row ">
-            <div class="text-center" style="margin: 0 auto;">
-                <h4>Mail</h4>
-                <p>
-                    Kingdom City <br />
-                    P.O. Box 90 <br />
-                    Riyadh 11391 <br />
-                    Saudi Arabia
-                </p>
+    </div>
+    <main class="container" style="padding-top:10px !important;padding-bottom: 50px !important;">
+        <div class="row">
+            The compound is ideally situated for easy access from virtually every part of Riyadh. It is located at the junction of Takhagususi Street and King Abdul Aziz Road. It is a 20-minute drive from King Khalid International airport, 15 minutes from the diplomatic quarter and 10 minutes from all major shopping centers.
+            <br /><br />
 
-                <br /> <br />
-
-                <h4>Phone/Fax</h4>
-                <p>
-                    Telephone : 275-0275 <br />
-                    Fax: 275-0660
-                </p>
-
-                <br /> <br />
-
-                <h4>E-Mail</h4>
-                <p>
-                    marketing@kingdom-city.com
-                </p>
-
+            <div id="googleMap" style="width:100%;">
+                <img src="img/google-map.png" alt="" width="100%" />
             </div>
         </div>
     </main>
