--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <div class="row" style="padding:15px;margin-right:0;">
             <div class="col-md-6">
                 <div class="card bg-dark text-white">
-                    <a href="/villas">
+                    <a href="villas.html">
                         <img src="img/home-house.png" alt="house" style="width:100%" />
 
                         <div class="card-overlay-bottom-text">
@@ -218,7 +218,7 @@
 
             <div class="col-md-6">
                 <div class="card bg-dark text-white">
-                    <a href="/services">
+                    <a href="services.html">
                         <img src="img/home-pool.png" alt="house" style="width:100%" />
 
                         <div class="card-overlay-bottom-text">
