--- a/thecity.html
+++ b/thecity.html
@@ -176,44 +176,79 @@
     </header>
 
     <!-- Main Content -->
-    <main class="container" style="padding-top: 60px !important; padding-bottom: 50px !important;">
+    <style>
+        #thumbnails img{
+            width: 100%;
+            height: 250px;
+        }
+    </style>
 
-        <div class="row">
-            <h1>The City</h1>
+    <div class="jumbotron">
+        <div class="container">
+            <h1 class="display-4">The City</h1>
+            <div class="row text-justify" style="padding-top:10px">
+                Kingdom City is not your typical western residential compound.
+                Ultimately, it is a city with an attitude where lifestyle is
+                at its best. Designed to reflect the textures, the hues, of
+                nearby surrounding desert, it also conveys a sense of casual
+                elegance, with generous measures of flair.
+
+
+                <br /><br />
+                Strategically located and provides everything from Luxury four 
+                bedroom Villas with private pools to studios and guesthouses with 
+                all the facilities and amenities one would expect.
+            </div>
+        </div>
+    </div>
+
+    <main class="container" style="padding-top: 10px !important; padding-bottom: 50px !important;">
+
+        <div id="thumbnails" class="row">
+            <div class="col-md-4">
+                <img src="img/the-city-4.jpg" alt="" class="img-thumbnail" />
+            </div>
+            <div class="col-md-4">
+                <img src="img/the-city-1.jpg" alt="" class="img-thumbnail" />
+            </div>
+            <div class="col-md-4">
+                <img src="img/the-city-8.jpg" alt="" class="img-thumbnail" />
+            </div>
         </div>
 
-        <div class="row">
-            <h5 class="text-muted">Overview</h5>
-        </div>
-
-        <div class="row" style="margin-top: 20px;">
-            <div class="col-md-7">
-                <p>
-                    Kingdom City is not your typical western residential compound.
-                    Ultimately, it is a city with an attitude where lifestyle is
-                    at its best. Designed to reflect the textures, the hues, of
-                    nearby surrounding desert, it also conveys a sense of casual
-                    elegance, with generous measures of flair.
-                </p>
+        <div id="thumbnails" class="row">
+            <div class="col-md-4">
+                <img src="img/the-city-2.jpg" alt="" class="img-thumbnail" />
             </div>
-
-            <div class="col-md-5">
-                <img src="img/thecity.jpg" alt="" />
+            <div class="col-md-4">
+                <img src="img/the-city-3.jpg" alt="" class="img-thumbnail" />
+            </div>
+            <div class="col-md-4">
+                <img src="img/the-city-6.jpg" alt="" class="img-thumbnail" />
             </div>
         </div>
 
-        <div class="row" style="margin-top: 40px;">
-            <div class="col-md-5">
-                <img src="img/thecity1.jpg" alt="" />
+        <div id="thumbnails" class="row">
+            <div class="col-md-4">
+                <img src="img/the-city-5.jpg" alt="" class="img-thumbnail" />
             </div>
+            <div class="col-md-4">
+                <img src="img/the-city-7.jpg" alt="" class="img-thumbnail" />
+            </div>
+            <div class="col-md-4">
+                <img src="img/the-city-12.jpg" alt="" class="img-thumbnail" />
+            </div>
+        </div>
 
-            <div class="col-md-7">
-                <p>
-                    Consisting of 333 living accommodations and being strategically
-                    located, Kingdom City provides everything from Luxury four bedroom
-                    Villas with private pools to studios and guesthouses with all the
-                    facilities and amenities one would expect.
-                </p>
+        <div id="thumbnails" class="row">
+            <div class="col-md-4">
+                <img src="img/the-city-10.jpg" alt="" class="img-thumbnail" />
+            </div>
+            <div class="col-md-4">
+                <img src="img/the-city-11.jpg" alt="" class="img-thumbnail" />
+            </div>
+            <div class="col-md-4">
+                <img src="img/the-city-9.jpg" alt="" class="img-thumbnail" />
             </div>
         </div>
     </main>
