--- a/rent.html
+++ b/rent.html
@@ -176,14 +176,13 @@
     </header>
 
     <!-- Main Content -->
-    <main class="container" style="padding-top: 60px !important; padding-bottom: 50px !important;">
-
-        <div class="row">
-            <h1>Rent It</h1>
+    <div class="jumbotron">
+        <div class="container">
+            <h1 class="display-4">Rent with Us!</h1>
         </div>
+    </div>
 
-        <br />
-
+    <main class="container" style="padding-top: 10px !important; padding-bottom: 50px !important;">
         <div class="row">
 
             <!-- Booking Form -->
