--- a/services.html
+++ b/services.html
@@ -176,15 +176,16 @@
     </header>
 
     <!-- Main Content -->
+    <div class="jumbotron">
+        <div class="container">
+            <h1 class="display-4">Services & Facilities</h1>
+            <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+        </div>
+    </div>
+
     <main class="container" style="padding-top: 60px !important; padding-bottom: 50px !important;">
 
-        <div class="jumbotron">
-            <div class="container">
-                <h1 class="display-3">Hello, world!</h1>
-                <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-                <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
-            </div>
-        </div>
+        
 
         <br />
 
