--- a/villas.html
+++ b/villas.html
@@ -176,9 +176,17 @@
     </header>
 
     <!-- Main Content -->
-
-
     <style>
+        .modal img {
+            width: 500px;
+            height: 350px;
+        }
+
+        .modal-body{
+          height: 400px;
+          overflow-y: auto;
+        }
+
         .background-opacity {
             height: 100%;
             width: 100%;
@@ -195,27 +203,28 @@
         }
     </style>
 
-    <main class="container" style="padding-top: 60px !important; padding-bottom: 50px !important;">
-        <div class="row">
-            <h1>Residences</h1>
-        </div>
-
-        <div class="row" style="margin-top: 20px;">
-            <div class="col-md-12">
+    <div class="jumbotron">
+        <div class="container">
+            <h1 class="display-4">Residences</h1>
+            <div class="row text-justify" style="padding-top:10px">
                 Kingdom City offers you a world of fine and quality housing. The beauty of Najdi architecture combined with all the comforts of a western lifestyle provides an amiable environment for a perfect stay. Consisting of 333 living accommodations with full support facilities, the City offers a range of housing facilities that present and are tailored to meet your needs.
                 All villas feature centrally air-conditioned (roof mounted systems), American/European standards furniture, soft packs, PBX (direct telephone lines are available on demand), front gardens, private rear gardens, shaded individual car parking beside daily entrance of each villa, in addition to many other facilities
             </div>
         </div>
+    </div>
 
+    <main class="container" style="padding-top: 10px !important; padding-bottom: 50px !important;">
+        
         <!-- Executive VIP -->
         <div class="row border-top border-left" style="margin-top: 30px;">
             <div class="col-md-6 text-center">
                 <div class="background-opacity" style="background-image: url(img/executive-1.jpg);"></div>
                 <div style="padding:150px;">
-                    <h3>EXECUTIVE VIP</h3>
-                    <small class="text-dark">4 Bedroom</small>
+                    <h4>VIP 4-Bedroom Villa</h4>
+                    <strong>A-type</strong>
                 </div>
             </div>
+
 
             <div class="col-md-6 text-center" style="padding-top: 50px;">
                 <h5>Surface Area</h5>
@@ -228,7 +237,7 @@
                 </div>
 
                 <div style="margin-top: 50px;">
-                    <button type="button" class="btn btn-outline-secondary">View More</button>
+                    <a id="vipView" href="a-type.html" class="btn btn-outline-secondary">View More</a>
                 </div>
             </div>
         </div>
@@ -236,10 +245,10 @@
         <!-- Executive Villa 4 bd-->
         <div class="row border-top border-left" style="margin-top: 30px;">
             <div class="col-md-6 text-center">
-                <div class="background-opacity" style="background-image: url(img/executive-2.jpg);"></div>
+                <div class="background-opacity" style="background-image: url(img/home-house.png);"></div>
                 <div style="padding:150px;">
-                    <h3>EXECUTIVE VILLA</h3>
-                    <small class="text-dark">4 Bedroom</small>
+                    <h5>Executive 4-Bedroom Villa</h5>
+                    <strong>B-Type</strong>
                 </div>
             </div>
 
@@ -263,10 +272,10 @@
         <!-- Executive Villa 3 bd -->
         <div class="row border-top border-left" style="margin-top: 30px;">
             <div class="col-md-6 text-center">
-                <div class="background-opacity" style="background-image: url(img/villa-2.jpg);"></div>
+                <div class="background-opacity" style="background-image: url(img/type-c.jpg);"></div>
                 <div style="padding:150px;">
-                    <h3>EXECUTIVE VILLA</h3>
-                    <small class="text-dark">3 Bedroom</small>
+                    <h5>Executive 3-Bedroom Villa</h5>
+                    <strong>C-Type</strong>
                 </div>
             </div>
 
@@ -286,13 +295,13 @@
             </div>
         </div>
 
-        <!-- Duplex -->
+        <!-- Standard -->
         <div class="row border-top border-left" style="margin-top: 30px;">
             <div class="col-md-6 text-center">
-                <div class="background-opacity" style="background-image: url(img/villa-3.jpg);"></div>
+                <div class="background-opacity" style="background-image: url(img/type-d.png);"></div>
                 <div style="padding:150px;">
-                    <h3>STANDARD VILLA</h3>
-                    <small class="text-dark">3 Bedroom</small>
+                    <h5>Standard 3-Bedroom Villa</h5>
+                    <strong>D-Type</strong>
                 </div>
             </div>
 
@@ -312,13 +321,13 @@
             </div>
         </div>
 
-        <!-- Standard -->
+        <!-- Duplex -->
         <div class="row border-top border-left" style="margin-top: 30px;">
             <div class="col-md-6 text-center">
-                <div class="background-opacity" style="background-image: url(img/villa-4.jpg);"></div>
+                <div class="background-opacity" style="background-image: url(img/type-g.jpg);"></div>
                 <div style="padding:150px;">
-                    <h3>DUPLEX VILLA</h3>
-                    <small class="text-dark">2 Bedroom</small>
+                    <h5>Duplex 2-Bedroom Villa</h5>
+                    <strong>G-Type</strong>
                 </div>
             </div>
 
@@ -337,13 +346,38 @@
             </div>
         </div>
 
-        <!-- Studio -->
+        <!-- 2 BD Apartment/Bungalow -->
         <div class="row border-top border-left" style="margin-top: 30px;">
             <div class="col-md-6 text-center">
-                <div class="background-opacity" style="background-image: url(img/villa-5.jpg);"></div>
+                <div class="background-opacity" style="background-image: url(img/type-g1.jpg);"></div>
                 <div style="padding:150px;">
-                    <h3>STUDIO</h3>
-                    <small class="text-dark">1 Bedroom</small>
+                    <h5>2 Bedroom Apartment/Bungalow</h5>
+                    <strong>G1-Type</strong>
+                </div>
+            </div>
+
+            <div class="col-md-6 text-center" style="padding-top: 50px;">
+                <h5>Surface Area</h5>
+                <div class="text-muted">120&#13217;</div>
+
+                <div class="text-justify" style="width: 250px; margin: auto; padding-top: 30px;">
+                    This villa is a standard two-bedroom duplex perfect for a
+                    family with precise needs for space and privacy.
+                </div>
+
+                <div style="margin-top: 50px;">
+                    <button type="button" class="btn btn-outline-secondary">View More</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- 1 Bedroom Apartment -->
+        <div class="row border-top border-left" style="margin-top: 30px;">
+            <div class="col-md-6 text-center">
+                <div class="background-opacity" style="background-image: url(img/type-f.jpg);"></div>
+                <div style="padding:150px;">
+                    <h5>1 Bedroom Apartment</h5>
+                    <strong>F-Type</strong>
                 </div>
             </div>
 
@@ -363,13 +397,13 @@
             </div>
         </div>
 
-        <!-- Guest House -->
+        <!-- Studio Serviced Apartment -->
         <div class="row border-top border-left" style="margin-top: 30px;">
             <div class="col-md-6 text-center">
-                <div class="background-opacity" style="background-image: url(img/villa-5.jpg);"></div>
+                <div class="background-opacity" style="background-image: url(img/type-e.jpg);"></div>
                 <div style="padding:150px;">
-                    <h3>GUEST HOUSE</h3>
-                    <small class="text-dark">1 Bedroom</small>
+                    <h5>Studio Serviced Apartment</h5>
+                    <strong>E-Type</strong>
                 </div>
             </div>
 
@@ -390,6 +424,62 @@
         </div>
     </main>
 
+    <!-- Executive VIP Modal -->
+    <div class="modal" tabindex="-1" role="dialog" id="eVIP">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Executive VIP</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item">
+                                <img class="first-slide" src="img/executive-vip-1.png" alt="First slide">                               
+                            </div>
+                            <div class="carousel-item active">
+                                <img class="second-slide" src="img/executive-vip-2.png" alt="Second slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="third-slide" src="img/executive-vip-3.jpg" alt="Third slide">
+                            </div>
+                        </div>
+                        
+                        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+
+                    <br />
+
+                    House Amenities:
+
+                    <ul>
+                        <li>Carpeted Rooms</li>
+                        <li>Private Swimming Pool w/ Kiddie Pool</li>
+                    </ul>
+
+                    The villa is fitted with carpeting for the bedrooms, built in wardrobes and luxurious marble floors. You can enjoy entertaining your guests in the simplify living room and the 12 seated dinning room. Enjoy a ground floor family living room and a first floor living room with a view of the pool, a well-finished kitchen and a breakfast room.
+
+                    <br /><br />
+
+                    Your enjoyment will be expanded by a private swimming pool accessorized with a kiddie’s pool.  The villa offers a large private backyard and three entrances; a formal entrance, a daily entrance and a side entrance from the kitchen door. 
+
+                    <br /><br />
+
+                    The villa is also fitted with a laundry room, a room for your house help and dual shaded car parking. This villa is conveniently designed for a family with an intricate need for space and privacy and offers all the amenities of perfect living standards.     
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Footer -->
     <footer class="footer">
