--- a/contacts.html
+++ b/contacts.html
@@ -219,7 +219,7 @@
             <br /><br />
 
             <div id="googleMap" style="width:100%;">
-                <img src="img/google-map.png" alt="" width="100%" />
+                <img src="img/google-map.jpg" alt="" width="100%" />
             </div>
         </div>
     </main>
