--- a/villas.html
+++ b/villas.html
@@ -218,7 +218,7 @@
         <!-- Executive VIP -->
         <div class="row border-top border-left" style="margin-top: 30px;">
             <div class="col-md-6 text-center">
-                <div class="background-opacity" style="background-image: url(img/executive-1.jpg);"></div>
+                <div class="background-opacity" style="background-image: url(img/type-a.jpg);"></div>
                 <div style="padding:150px;">
                     <h4>VIP 4-Bedroom Villa</h4>
                     <strong>A-type</strong>
@@ -245,7 +245,7 @@
         <!-- Executive Villa 4 bd-->
         <div class="row border-top border-left" style="margin-top: 30px;">
             <div class="col-md-6 text-center">
-                <div class="background-opacity" style="background-image: url(img/home-house.png);"></div>
+                <div class="background-opacity" style="background-image: url(img/type-b.jpg);"></div>
                 <div style="padding:150px;">
                     <h5>Executive 4-Bedroom Villa</h5>
                     <strong>B-Type</strong>
@@ -298,7 +298,7 @@
         <!-- Standard -->
         <div class="row border-top border-left" style="margin-top: 30px;">
             <div class="col-md-6 text-center">
-                <div class="background-opacity" style="background-image: url(img/type-d.png);"></div>
+                <div class="background-opacity" style="background-image: url(img/type-d.jpg);"></div>
                 <div style="padding:150px;">
                     <h5>Standard 3-Bedroom Villa</h5>
                     <strong>D-Type</strong>
