--- a/thecity.html
+++ b/thecity.html
@@ -177,6 +177,10 @@
 
     <!-- Main Content -->
     <style>
+        #thumbnails {
+            padding-top: 20px;
+        }
+
         #thumbnails img{
             width: 100%;
             height: 250px;
@@ -202,9 +206,9 @@
         </div>
     </div>
 
-    <main class="container" style="padding-top: 10px !important; padding-bottom: 50px !important;">
+    <main class="container" style="padding-bottom: 50px !important;">
 
-        <div id="thumbnails" class="row">
+        <div id="thumbnails" class="row" style="padding-top: 0px;">
             <div class="col-md-4">
                 <img src="img/the-city-4.jpg" alt="" class="img-thumbnail" />
             </div>
