--- a/services.html
+++ b/services.html
@@ -176,37 +176,232 @@
     </header>
 
     <!-- Main Content -->
+    <style>
+        #pill-content {
+
+        }
+
+        #pill-content img {
+            width: 555px;
+            height: 450px;
+        }
+
+        #pill-content .row{
+            padding-top: 15px;
+        }
+
+        ul.nav.nav-pills li {
+            width: 20%;
+            text-align: center;
+        }
+    </style>
     <div class="jumbotron">
         <div class="container">
             <h1 class="display-4">Services & Facilities</h1>
-            <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+            <br />
+            <div>
+                <ul class="nav nav-pills">
+                    <li>
+                        <a class="nav-link active" id="v-pills-services-tab" data-toggle="pill" href="#v-pills-services" role="tab" aria-controls="v-pills-services" aria-selected="true">Services</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" id="v-pills-entertainment-tab" data-toggle="pill" href="#v-pills-entertainment" role="tab" aria-controls="v-pills-entertainment" aria-selected="false">Entertainment</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" id="v-pills-fitness-tab" data-toggle="pill" href="#v-pills-fitness" role="tab" aria-controls="v-pills-fitness" aria-selected="false">Fitness</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" id="v-pills-restaurants-tab" data-toggle="pill" href="#v-pills-restaurants" role="tab" aria-controls="v-pills-restaurants" aria-selected="false">Restaurants</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" id="v-pills-shopping-tab" data-toggle="pill" href="#v-pills-shopping" role="tab" aria-controls="v-pills-shopping" aria-selected="false">Shopping</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 
-    <main class="container" style="padding-top: 60px !important; padding-bottom: 50px !important;">
+    <main class="container" style="padding-top: 10px !important; padding-bottom: 50px !important;">
 
-        
-
-        <br />
-
-        <div class="row">
-            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical" style="color: #000 !important;">
-                <a class="nav-link active" id="v-pills-services-tab" data-toggle="pill" href="#v-pills-services" role="tab" aria-controls="v-pills-services" aria-selected="true">Services</a>
-                <a class="nav-link" id="v-pills-entertainment-tab" data-toggle="pill" href="#v-pills-entertainment" role="tab" aria-controls="v-pills-entertainment" aria-selected="false">Entertainment</a>
-                <a class="nav-link" id="v-pills-sport-tab" data-toggle="pill" href="#v-pills-sport" role="tab" aria-controls="v-pills-sport" aria-selected="false">Sport</a>
-                <a class="nav-link" id="v-pills-fitness-tab" data-toggle="pill" href="#v-pills-fitness" role="tab" aria-controls="v-pills-fitness" aria-selected="false">Fitness</a>
-                <a class="nav-link" id="v-pills-clinic-tab" data-toggle="pill" href="#v-pills-clinic" role="tab" aria-controls="v-pills-clinic" aria-selected="false">Clinic</a>
-                <a class="nav-link" id="v-pills-restaurants-tab" data-toggle="pill" href="#v-pills-restaurants" role="tab" aria-controls="v-pills-restaurants" aria-selected="false">Restaurants</a>
-                <a class="nav-link" id="v-pills-shopping-tab" data-toggle="pill" href="#v-pills-shopping" role="tab" aria-controls="v-pills-shopping" aria-selected="false">Shopping</a>
-            </div>
+        <div id="pill-content" class="row">
             <div class="tab-content" id="v-pills-tabContent">
-                <div class="tab-pane fade show active" id="v-pills-services" role="tabpanel" aria-labelledby="v-pills-services-tab">a</div>
-                <div class="tab-pane fade" id="v-pills-entertainment" role="tabpanel" aria-labelledby="v-pills-entertainment-tab">b</div>
-                <div class="tab-pane fade" id="v-pills-sport" role="tabpanel" aria-labelledby="v-pills-sport-tab">c</div>
-                <div class="tab-pane fade" id="v-pills-fitness" role="tabpanel" aria-labelledby="v-pills-fitness-tab">d</div>
-                <div class="tab-pane fade" id="v-pills-clinic" role="tabpanel" aria-labelledby="v-pills-clinic-tab">e</div>
-                <div class="tab-pane fade" id="v-pills-restaurants" role="tabpanel" aria-labelledby="v-pills-restaurants-tab">f</div>
-                <div class="tab-pane fade" id="v-pills-shopping" role="tabpanel" aria-labelledby="v-pills-shopping-tab">g</div>
+
+                <!-- Services (Day Care Center, Clinic, Transportation/Shuttle, Maintenance & Emergency crew/truck/ambulance), Business Center -->
+                <div class="tab-pane fade show active" id="v-pills-services" role="tabpanel" aria-labelledby="v-pills-services-tab">
+                    <p>
+                        The city offers all the services needed to make your life comfortable and worthwhile. Maintenance is available at all times and free of charge.
+                        <br /><br />
+                        The compound offers you a Day Care center a Nursery a Dutch School and a Library.  It also has a Video Club and an Internet café. Free transportation is available to all schools and major shopping centers. The City has a Limousine Service, 32 satellite and in house video transmitted through cable system and a clinic. To keep the City tidy, a garbage collection service has been designed.
+                        <br /><br />
+                        “24 hours advanced security, 24 hours medical clinic (resident physician and dentist) plus 24 hours emergency maintenance services roundup the Kingdom City safety and comfort package.  The school, shopping and airport shuttle bus service and an efficient limousine service rounds up the Transportation services package.”
+                        <br /><br />
+                        <strong>Business</strong><br />
+                        Utilizing a state of the art Business Center, the City offers all what is needed for the perfect business interaction. With up to date facilities and services in the fields of presentation and telecommunication the Business Center gives you the best environment for meeting your expectations and fulfilling your aims.
+                    </p>
+
+                    <br /><br />
+
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img src="img/the-city-4.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                        <div class="col-md-6">
+                            <img src="img/the-city-4.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img src="img/the-city-4.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                        <div class="col-md-6">
+                            <img src="img/the-city-4.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img src="img/the-city-4.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                        <div class="col-md-6">
+                            <img src="img/the-city-4.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Entertainment & Sports -->
+                <div class="tab-pane fade" id="v-pills-entertainment" role="tabpanel" aria-labelledby="v-pills-entertainment-tab">
+                    The Entertainment Center presents to all the city tenants an intensive source of fun. Utilizing 1,100 m2, it offers a video games room, teenagers’ room and 4 swimming pools. The pools cater to the needs of everyone, with 2 casual pools with a waterfall, a lap pool for the sport enthusiast and a kiddies pool for the safe dip of your children.
+                    <br /><br />
+                    The City’s bowling center is a 6 lane AMF bowling center for all those who enjoy a good strike.
+                    <br /><br />
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img src="img/entertainment-1-playground.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                        <div class="col-md-6">
+                            <img src="img/entertainment-8-playground.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img src="img/entertainment-2-sports.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                        <div class="col-md-6">
+                            <img src="img/entertainment-5-sports.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img src="img/entertainment-9-sports.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                        <div class="col-md-6">
+                            <img src="img/entertainment-4-playground.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img src="img/entertainment-6-bowling.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                        <div class="col-md-6">
+                            <img src="img/entertainment-7-bowling.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img src="img/entertainment-3-pool.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                        <div class="col-md-6">
+                            <img src="img/entertainment-12-pool.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img src="img/entertainment-13-pool.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                        <div class="col-md-6">
+                            <img src="img/entertainment-14-pool.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img src="img/entertainment-15-pool.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                        <div class="col-md-6">
+                            <img src="img/entertainment-16-pool.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img src="img/entertainment-17-pool.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                        <div class="col-md-6">
+                            <img src="img/entertainment-11-pool.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Fitness -->
+                <div class="tab-pane fade" id="v-pills-fitness" role="tabpanel" aria-labelledby="v-pills-fitness-tab">
+                    Our health club offers the services of a state of the art gym an aerobics floor and a multi purpose ground hall.
+                    <br /><br />
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img src="img/the-city-4.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                        <div class="col-md-6">
+                            <img src="img/the-city-4.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Restaurant -->
+                <div class="tab-pane fade" id="v-pills-restaurants" role="tabpanel" aria-labelledby="v-pills-restaurants-tab">
+                    The City provides an elegant restaurant facility for formal dinning “a la carté” and a short order corner, open all day, in a casual surrounding overlooking the pools and sports facilities.
+                    <br /><br />
+                    Enjoy the choice of indulging into fine cuisine at our  restaurant or have a snack at the cafeteria overlooking the pools and waterfall.
+                    <br /><br />
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img src="img/resto-1.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                        <div class="col-md-6">
+                            <img src="img/resto-2.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img src="img/resto-3.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                        <div class="col-md-6">
+                            <img src="img/resto-4.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img src="img/resto-5.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                        <div class="col-md-6">
+                            <img src="img/resto-6.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Shopping -->
+                <div class="tab-pane fade" id="v-pills-shopping" role="tabpanel" aria-labelledby="v-pills-shopping-tab">
+                    Kingdom city offers you a multiplicity of services and leisure time facilities, its’ diversity provides you with a supermarket, shops, a barber and beauty saloon, and a nursery.
+                    <br /><br />
+                    The City has a mini supermarket and 6 shops that cater sufficiently for the needs of the tenants.
+                    <br /><br />
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img src="img/the-city-4.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                        <div class="col-md-6">
+                            <img src="img/the-city-4.jpg" alt="" class="img-thumbnail" />
+                        </div>
+                    </div></div>
+                
             </div>
         </div>
     </main>
